weight and exact price in excel sheet

--- a/public/index.html
+++ b/public/index.html
@@ -500,8 +500,8 @@
         <div class="container-fluid py-5">
             <div class="container py-5">
                 <h1 class="display-4 text-uppercase text-center mb-5">Meet Our <span class="text-primaryorange">Team</span></h1>
-                <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px">
-                    <div class="team-item">
+                <div class="d-flex justify-content-center align-items-center flex-wrap position-relative" style="padding: 0 30px">
+                    <div class="team-item m-2">
                         <img class="img-fluid w-100" src="img/tanishq.jpg" alt="" />
                         <div class="position-relative py-4">
                             <h4 class="text-uppercase">Tanishq Sharma</h4>
@@ -513,7 +513,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-item">
+                    <div class="team-item m-2">
                         <img class="img-fluid w-100" src="img/kunal.jpg" alt="" />
                         <div class="position-relative py-4">
                             <h4 class="text-uppercase">Kunal Sharma</h4>
@@ -525,7 +525,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-item">
+                    <!-- <div class="team-item">
                         <img class="img-fluid w-100" src="img/team-3.jpg" alt="" />
                         <div class="position-relative py-4">
                             <h4 class="text-uppercase">Tanishq Sharma</h4>
@@ -536,8 +536,8 @@
                                 <a class="btn btn-lg btn-primaryorange btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="team-item">
+                    </div> -->
+                    <!-- <div class="team-item">
                         <img class="img-fluid w-100" src="img/team-4.jpg" alt="" />
                         <div class="position-relative py-4">
                             <h4 class="text-uppercase">Tanishq Sharma</h4>
@@ -548,7 +548,7 @@
                                 <a class="btn btn-lg btn-primaryorange btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
