--- a/public/termsnconditions.html
+++ b/public/termsnconditions.html
@@ -41,9 +41,8 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-dark px-3" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!">
-                            <i class="fab fa-whatsapp"></i>
-                        </a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+
 
                         <a class="text-dark px-3" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
                             <i class="fab fa-instagram"></i>
