--- a/public/contact.html
+++ b/public/contact.html
@@ -42,12 +42,8 @@
             </div>
             <div class="col-md-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-3" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-dark px-3" href="">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
+                    <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+
                     <a class="text-dark px-3" href="">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
@@ -151,8 +147,8 @@
                 <p class="text-dark"><i class="fa fa-envelope text-dark mr-3"></i>taapmaanlive@gmail.com</p>
                 <h6 class="text-uppercase text-white py-2">Follow Us</h6>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+                    
                     <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
                     <a class="btn btn-lg btn-dark btn-lg-square" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
                 </div>
