final code into frontend

--- a/public/service.html
+++ b/public/service.html
@@ -34,19 +34,22 @@
             <div class="row">
                 <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-dark pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>0129 406 5262</a>
+                        <a class="text-dark pr-3" target="_blank" href="tel:+91-01294065262"><i class="fa fa-phone-alt mr-2"></i>0129 406 5262</a>
                         <span class="text-dark">|</span>
-                        <a class="text-dark px-3" href=""><i class="fa fa-envelope mr-2"></i>taapmaanlive@gmail.com</a>
+                        <a class="text-dark px-3" target="_blank" href="mailto:taapmaanlive@gmail.com"><i class="fa fa-envelope mr-2"></i>taapmaanlive@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
-                        
-                        <a class="text-dark px-3" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
+                        <a class="text-dark px-3" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+
+                        <a class="text-dark px-3" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="text-dark pl-3" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg">
+
+                        <a class="text-dark pl-3" target="_blank" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -141,14 +144,14 @@
             <div class="row pt-5">
                 <div class="col-lg-3 col-md-6 mb-5">
                     <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Sector - 16 Faridabad</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>0129 406 5262</p>
-                    <p><i class="fa fa-envelope text-white mr-3"></i>taapmaanlive@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i><a target="_blank" class="text-dark" href="#">Sector 16A, SEO 59 Lower Ground Floor</a></p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i><a target="_blank" class="text-dark" href="tel:+91-01294065262">0129 406 5262</a></p>
+                    <p class="mb-2"><i class="fa fa-envelope text-white mr-3"></i><a target="_blank" class="text-dark" href="mailto:taapmaanlive@gmail.com">taapmaanlive@gmail.com</a></p>
                     <h6 class="text-uppercase text-white py-2">Follow Us</h6>
                     <div class="d-flex justify-content-start">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-lg btn-dark btn-lg-square" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square" target="_blank" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5">
