--- a/public/vehiclebooking.html
+++ b/public/vehiclebooking.html
@@ -44,24 +44,26 @@
     }"
         ></iframe>
         <!-- Topbar Start -->
-        <div class="container-fluid bg-secondaryblueg py-3 px-lg-5 d-none d-lg-block" style="background-color: #d1e9ef">
+        <div class="container-fluid py-2 px-lg-5 d-none d-lg-block bg-secondaryblue">
             <div class="row">
                 <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-dark pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>0129 406 5262</a>
+                        <a class="text-dark pr-3" target="_blank" href="tel:+91-01294065262"><i class="fa fa-phone-alt mr-2"></i>0129 406 5262</a>
                         <span class="text-dark">|</span>
-                        <a class="text-dark px-3" href=""><i class="fa fa-envelope mr-2"></i>taapmaanlive@gmail.com</a>
+                        <a class="text-dark px-3" target="_blank" href="mailto:taapmaanlive@gmail.com"><i class="fa fa-envelope mr-2"></i>taapmaanlive@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="text-dark px-3" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
 
-                        
-                        <a class="text-dark px-3" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
+                        <a class="text-dark px-3" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="text-dark pl-3" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg">
+
+                        <a class="text-dark pl-3" target="_blank" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -72,7 +74,7 @@
 
         <!-- Navbar Start -->
         <div class="container-fluid position-relative nav-bar p-0">
-            <div class="position-relative px-lg-5" style="z-index: 9">
+            <div class="position-relative" style="z-index: 9">
                 <nav class="navbar navbar-expand-lg bg-white shadow navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                     <a href="index.html" class="navbar-brand">
                         <img src="img/logo.png" width="180px" />
@@ -82,24 +84,9 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Service</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Vehicles</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="car.html" class="dropdown-item">Car Listing</a>
-                                    <a href="detail.html" class="dropdown-item">Car Detail</a>
-                                    <a href="booking.html" class="dropdown-item">Car Booking</a>
-                                </div>
-                            </div>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Gallery</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="team.html" class="dropdown-item">The Team</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                </div>
-                            </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                             <a href="login.html" class="nav-item nav-link">Login</a>
                         </div>
@@ -121,14 +108,14 @@
             <div class="row pt-5">
                 <div class="col-lg-3 col-md-6 mb-5">
                     <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Sector 16A, SEO 59 lower ground floor</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>0129 406 5262</p>
-                    <p><i class="fa fa-envelope text-white mr-3"></i>taapmaanlive@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i><a target="_blank" class="text-dark" href="#">Sector 16A, SEO 59 Lower Ground Floor</a></p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i><a target="_blank" class="text-dark" href="tel:+91-01294065262">0129 406 5262</a></p>
+                    <p class="mb-2"><i class="fa fa-envelope text-white mr-3"></i><a target="_blank" class="text-dark" href="mailto:taapmaanlive@gmail.com">taapmaanlive@gmail.com</a></p>
                     <h6 class="text-uppercase text-white py-2">Follow Us</h6>
                     <div class="d-flex justify-content-start">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-lg btn-dark btn-lg-square" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square" target="_blank" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5">
@@ -144,11 +131,11 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-greyishblue py-4 px-sm-3 px-md-5">
-            <p class="mb-2 text-center text-body">&copy; <a href="#">Taapmaan</a>. All Rights Reserved.</p>
+        <div class="container-fluid bg-black py-2 px-sm-3 px-md-5">
+            <p class="mb-2 text-center text-light">&copy; <a href="#">Taapmaan</a>. All Rights Reserved.</p>
 
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <!-- <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">ocupy</a></p> -->
+            <!-- <p class="m-0 text-center text-dark">Designed by <a href="https://htmlcodex.com">ocupy</a></p> -->
         </div>
         <!-- Footer End -->
 
