--- a/public/termsnconditions.html
+++ b/public/termsnconditions.html
@@ -41,8 +41,9 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
-
+                        <a class="text-dark px-3" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
 
                         <a class="text-dark px-3" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr">
                             <i class="fab fa-instagram"></i>
@@ -145,7 +146,7 @@
                     <p class="mb-2"><i class="fa fa-envelope text-white mr-3"></i><a target="_blank" class="text-dark" href="mailto:taapmaanlive@gmail.com">taapmaanlive@gmail.com</a></p>
                     <h6 class="text-uppercase text-white py-2">Follow Us</h6>
                     <div class="d-flex justify-content-start">
-                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/PUT_PHONE_NUMBER_HERE?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://wa.me/7303650513?text=Hi!%20I%20am%20interested%20in%20Taapmaan's%20cold%20storage%20and%20logistics%20services.%20Could%20you%20please%20share%20more%20information?%20Thank%20you!"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-lg btn-dark btn-lg-square mr-2" target="_blank" href="https://www.instagram.com/taapmaanlive?igsh=eW85Zmt0cWQ5ejM4&utm_source=qr"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-lg btn-dark btn-lg-square" target="_blank" href="https://www.youtube.com/watch?v=Jz4Wz4BvBFg"><i class="fab fa-youtube"></i></a>
                     </div>
